--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -20,4 +20,14 @@
  	<url-pattern>/</url-pattern>
  </servlet-mapping>
  
+ <servlet>
+ 	<servlet-name>member</servlet-name>
+ 	<servlet-class>com.member.MemberController</servlet-class>
+ </servlet>
+ <servlet-mapping>
+ 	<servlet-name>member</servlet-name>
+ 	<url-pattern>/member/*</url-pattern>
+ </servlet-mapping>
+ 
+ 
 </web-app>
