--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -29,5 +29,14 @@
  	<url-pattern>/member/*</url-pattern>
  </servlet-mapping>
  
+  <servlet>
+ 	<servlet-name>notice</servlet-name>
+ 	<servlet-class>com.notice.NoticeController</servlet-class>
+ </servlet>
+ <servlet-mapping>
+ 	<servlet-name>notice</servlet-name>
+ 	<url-pattern>/notice/*</url-pattern>
+ </servlet-mapping>
+ 
  
 </web-app>
