--- a/WebContent/WEB-INF/web.xml
+++ b/WebContent/WEB-INF/web.xml
@@ -1,6 +1,39 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd" id="WebApp_ID" version="4.0">
  
+ <context-param>
+ 	<param-name></param-name>
+ 	<param-value></param-value>
+ </context-param>
+ 
+ 
+ <filter>
+ 	<filter-name>encode</filter-name>
+ 	<filter-class>com.filter.EncodingFilter</filter-class>
+ 	<init-param>
+ 		<param-name>enc</param-name>
+ 		<param-value>UTF-8</param-value>
+ 	</init-param>
+ </filter>
+ <filter-mapping>
+ 	<filter-name>encode</filter-name>
+ 	<url-pattern>/*</url-pattern>
+ </filter-mapping>
+ 
+ <filter>
+ 	<filter-name>admin</filter-name>
+ 	<filter-class>com.filter.AdminFilter</filter-class> 
+ </filter>
+ <filter-mapping>
+ 	<filter-name>admin</filter-name>
+ 	<url-pattern>/point/pointAdd</url-pattern>
+ </filter-mapping>
+ <filter-mapping>
+ 	<filter-name>admin</filter-name>
+ 	<url-pattern>/notice/noticeAdd</url-pattern>
+ </filter-mapping>
+
+ 
  <servlet>
  	<servlet-name>point</servlet-name>
  	<servlet-class>com.point.PointController</servlet-class>
